exports['api explore should accept buffer with inline map 1'] = {
  "bundles": [
    {
      "bundleName": "Buffer",
      "totalBytes": 2991,
      "unmappedBytes": 1,
      "eolBytes": 1,
      "sourceMapCommentBytes": 2308,
      "files": {
        "node_modules/browser-pack/_prelude.js": 480,
        "src/bar.js": 104,
        "src/foo.js": 97,
        "[sourceMappingURL]": 2308,
        "[unmapped]": 1
      }
    }
  ],
  "errors": [
    {
      "bundleName": "Buffer",
      "isWarning": true,
      "code": "UnmappedBytes",
      "message": "Unable to map 1/2991 bytes (0.03%)"
    }
  ]
}

exports['api explore should accept buffers with js and map 1'] = {
  "bundles": [
    {
      "bundleName": "Buffer",
      "totalBytes": 718,
      "unmappedBytes": 1,
      "eolBytes": 1,
      "sourceMapCommentBytes": 35,
      "files": {
        "node_modules/browser-pack/_prelude.js": 480,
        "src/bar.js": 104,
        "src/foo.js": 97,
        "[sourceMappingURL]": 35,
        "[unmapped]": 1
      }
    }
  ],
  "errors": [
    {
      "bundleName": "Buffer",
      "isWarning": true,
      "code": "UnmappedBytes",
      "message": "Unable to map 1/718 bytes (0.14%)"
    }
  ]
}

exports['api explore should generate data excluding source map bytes 1'] = {
  "bundles": [
    {
      "bundleName": "data/foo.min.js",
      "totalBytes": 683,
      "unmappedBytes": 1,
      "eolBytes": 1,
      "sourceMapCommentBytes": 35,
      "files": {
        "node_modules/browser-pack/_prelude.js": 480,
        "src/bar.js": 104,
        "src/foo.js": 97,
        "[unmapped]": 1
      }
    },
    {
      "bundleName": "data/inline-map.js",
      "totalBytes": 683,
      "unmappedBytes": 1,
      "eolBytes": 1,
      "sourceMapCommentBytes": 2308,
      "files": {
        "node_modules/browser-pack/_prelude.js": 480,
        "src/bar.js": 104,
        "src/foo.js": 97,
        "[unmapped]": 1
      }
    }
  ],
  "errors": [
    {
      "bundleName": "data/foo.min.js",
      "isWarning": true,
      "code": "UnmappedBytes",
      "message": "Unable to map 1/683 bytes (0.15%)"
    },
    {
      "bundleName": "data/inline-map.js",
      "isWarning": true,
      "code": "UnmappedBytes",
      "message": "Unable to map 1/683 bytes (0.15%)"
    }
  ]
}

exports['api explore should generate data respecting onlyMapped and replace options 1'] = {
  "bundles": [
    {
      "bundleName": "data/foo.min.js",
      "totalBytes": 718,
      "unmappedBytes": 1,
      "eolBytes": 1,
      "sourceMapCommentBytes": 35,
      "files": {
        "node_modules/browser-pack/_prelude.js": 480,
        "src/bar.js": 104,
        "src/foo.js": 97,
        "[sourceMappingURL]": 35
      }
    }
  ],
  "errors": []
}

exports['api explore should generate data when provided with file with referenced map 1'] = {
  "bundles": [
    {
      "bundleName": "data/foo.min.js",
      "totalBytes": 718,
      "unmappedBytes": 1,
      "eolBytes": 1,
      "sourceMapCommentBytes": 35,
      "files": {
        "node_modules/browser-pack/_prelude.js": 480,
        "src/bar.js": 104,
        "src/foo.js": 97,
        "[sourceMappingURL]": 35,
        "[unmapped]": 1
      }
    }
  ],
  "errors": [
    {
      "bundleName": "data/foo.min.js",
      "isWarning": true,
      "code": "UnmappedBytes",
      "message": "Unable to map 1/718 bytes (0.14%)"
    }
  ]
}

exports['api explore should generate data when provided with file with separated map file 1'] = {
  "bundles": [
    {
      "bundleName": "data/no-map.js",
      "totalBytes": 682,
      "unmappedBytes": 1,
      "eolBytes": 0,
      "sourceMapCommentBytes": 0,
      "files": {
        "node_modules/browser-pack/_prelude.js": 480,
        "src/bar.js": 104,
        "src/foo.js": 97,
        "[sourceMappingURL]": 0,
        "[unmapped]": 1
      }
    }
  ],
  "errors": [
    {
      "bundleName": "data/no-map.js",
      "isWarning": true,
      "code": "UnmappedBytes",
      "message": "Unable to map 1/682 bytes (0.15%)"
    }
  ]
}

exports['api explore should generate data when provided with js file with inline map 1'] = {
  "bundles": [
    {
      "bundleName": "data/inline-map.js",
      "totalBytes": 2991,
      "unmappedBytes": 1,
      "eolBytes": 1,
      "sourceMapCommentBytes": 2308,
      "files": {
        "node_modules/browser-pack/_prelude.js": 480,
        "src/bar.js": 104,
        "src/foo.js": 97,
        "[sourceMappingURL]": 2308,
        "[unmapped]": 1
      }
    }
  ],
  "errors": [
    {
      "bundleName": "data/inline-map.js",
      "isWarning": true,
      "code": "UnmappedBytes",
      "message": "Unable to map 1/2991 bytes (0.03%)"
    }
  ]
}

exports['api explore when output format specified should generate JSON 1'] = `
{
  "results": [
    {
      "bundleName": "data/foo.min.js",
      "totalBytes": 718,
      "unmappedBytes": 1,
      "eolBytes": 1,
      "sourceMapCommentBytes": 35,
      "files": {
        "node_modules/browser-pack/_prelude.js": 480,
        "src/bar.js": 104,
        "src/foo.js": 97,
        "[sourceMappingURL]": 35,
        "[unmapped]": 1
      }
    }
  ]
}
`

exports['api explore when output format specified should generate TSV 1'] = `
Source\tSize\r
node_modules/browser-pack/_prelude.js\t480\r
src/bar.js\t104\r
src/foo.js\t97\r
[sourceMappingURL]\t35\r
[unmapped]\t1\r
\r
[sourceMappingURL]\t2308\r
node_modules/browser-pack/_prelude.js\t480\r
src/bar.js\t104\r
src/foo.js\t97\r
[unmapped]\t1
`
